--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 Likely early 17th century
             </div>
             <div class="col-md-10">
-                <h3 class="fs-4 fw-normal">Hamlet</h3>
+                <h3 class="fs-4 fw-normal">CyberSecurity</h3>
 
                 <div><p>Prince Hamlet is visited by his father&#39;s ghost and ordered to avenge his father&#39;s murder by killing King Claudius, his uncle. After struggling with several questions, including whether what the ghost said is true and whether it is right for him to take revenge, Hamlet, along with almost all the other major characters, is killed.</p></div>
 
