--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <span class="text-nowrap">Email</span>
-                        <span class="text-nowrap"><a href="mailto:wil64@yahoo.com"><i class="fa fa-envelope fact-icon"></i>wil64@yahoo.com</a></span>
+                        <span class="text-nowrap"><a href="patrickpcaa@gmail.com"><i class="fa fa-envelope fact-icon"></i>wil64@yahoo.com</a></span>
                     </li>
                 </ul>
             </div>
