--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li class="list-group-item d-flex justify-content-between align-items-start">
                             <span class="text-nowrap">Linkedin</span>
                             <span class="text-nowrap"><a href="https://www.linkedin.com/in/patrick-coser/">
-                  <i class="fab fa-linkedin-in"></i>Patrick Coser
+                  <i class="fab fa-linkedin-in"></i>Patrick-Coser
                 </a></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -68,11 +68,11 @@
             <h3 class="h2 screen mb-4">Skills</h3>
             <div class="row align-items-center">
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Python</small>
+                    <small>Hacking</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 80%"></div>
+                        <div class="skills-bar" style="width: 100%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Pentest Interno</small>
+                    <small>Pentest</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -92,71 +92,71 @@
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Pentest Externo</small>
+                    <small>BACEN</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 85%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Auditoria Cyber</small>
+                    <small>Data Analysis</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 70%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Erotic</small>
+                    <small>COBIT</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Sonnets</small>
+                    <small>SQL</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 80%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Plays</small>
+                    <small>GitHub</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Writing</small>
+                    <small>OpenIA</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 80%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Directing</small>
+                    <small>Cloud</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Literature</small>
+                    <small>Python</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 80%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Influence</small>
+                    <small>Análise vulnerabilidade</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -200,32 +200,36 @@
             </div>
             <div class="row d-block d-md-flex mb-5">
                 <div class="col-md-2 pt-1">
-                    1600 – 1601
+                    Fevereiro de 2022 – Momento
                 </div>
                 <div class="col-md-10">
-                    <h3 class="fs-4 fw-normal">Twelfth Night</h3>
+                    <h3 class="fs-4 fw-normal">Pentester</h3>
 
-                    <div><p>Viola finds herself shipwrecked in Illyria and, assuming that her brother Sebastian has died in the wreck, disguises herself as a man to gain a position in Duke Orsino&#39;s court. Orsino sends Viola (whom he knows as Cesario) to deliver a message to his love, Olivia. Olivia, however, dislikes the Duke. She falls in love with Viola, who she thinks is a man. Eventually, Viola&#39;s brother Sebastian, who in fact was unharmed in the wreck, reappears. At a critical moment, Viola&#39;s true identity is revealed when members of the court notice the similarities between her and Sebastian. Olivia quickly falls in love with Sebastian, and Viola confesses her love for the Duke.</p></div>
+                    <div><ul><li>Pentest Externo;</li><li>Pentest Interno;</li><li>Pentest Web;</li><li>Análise de segurança.</li></ul></div>
 
                     <p>
-                        <span class="badge text-body border border-1">comedy</span>
-                        <span class="badge text-body border border-1">love</span>
+                        <span class="badge text-body border border-1">Pentest Interno</span>
+                        <span class="badge text-body border border-1">Pentest Externo</span>
+                        <span class="badge text-body border border-1">Pentest Web</span>
+                        <span class="badge text-body border border-1">Análise de Vulnerabilidade</span>
                     </p>
                 </div>
             </div>
             <div class="row d-block d-md-flex">
                 <div class="col-md-2 pt-1">
-                    1595–1596, with a possible early draft written in 1591
+                    Abril de 2022 – Junho de 202
                 </div>
                 <div class="col-md-10">
-                    <h3 class="fs-4 fw-normal">The Tragedy of Romeo and Juliet</h3>
+                    <h3 class="fs-4 fw-normal">Enygma</h3>
 
-                    <div><p>In Verona, Italy, two families, the Montagues and the Capulets, are in the midst of a bloody feud. Romeo, a Montague, and Juliet, a Capulet, fall in love and struggle to maintain their relationship in the face of familial hatred. After Romeo kills Juliet&#39;s cousin Tybalt in a fit of passion, things fall apart. Both lovers eventually commit suicide within minutes of each other, and the feuding families make peace over their recent grief.</p></div>
+                    <div><p>Fortinet:
+Análise de Log’s;
+Identificação de risco;
+Análise de relatórios de vulnerabilidade.</p></div>
 
                     <p>
-                        <span class="badge text-body border border-1">tragedy</span>
-                        <span class="badge text-body border border-1">death</span>
-                        <span class="badge text-body border border-1">love</span>
+                        <span class="badge text-body border border-1">SOC</span>
+                        <span class="badge text-body border border-1">Fortinet</span>
                     </p>
                 </div>
             </div>
