--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                     </p>
                 </div>
             </div>
-            <div class="row d-block d-md-flex">
+            <div class="row d-block d-md-flex mb-5">
                 <div class="col-md-2 pt-1">
-                    Abril de 2022 – Junho de 202
+                    Abril de 2022 – Junho de 2022
                 </div>
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Enygma</h3>
@@ -230,6 +230,40 @@ Análise de relatórios de vulnerabilidade.</p></div>
                     <p>
                         <span class="badge text-body border border-1">SOC</span>
                         <span class="badge text-body border border-1">Fortinet</span>
+                    </p>
+                </div>
+            </div>
+            <div class="row d-block d-md-flex mb-5">
+                <div class="col-md-2 pt-1">
+                    Abril de 2018 – Julho de 2021
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">EGS Brasil</h3>
+
+                    <div><p>Confecção de processamento de dados com python e elaboração de relatórios técnicos para cliente, criando meios de automatização com a linguagem na elaboração dos documentos;   -- Bibliotecas utilizadas Numpy, Pandas, Matplotlib, Cartopy, Seaborn, gsw, pylab e pycircstat; 
+Manutenção, testes e criação de procedimentos de equipamentos eletrônicos voltados para área da oceanografia;
+Aquisição de dados com moto aquática, levantamentos de dados e instalação de marégrafos.</p></div>
+
+                    <p>
+                        <span class="badge text-body border border-1">Data Analysis</span>
+                        <span class="badge text-body border border-1">Python</span>
+                        <span class="badge text-body border border-1">Geoprocessamento</span>
+                    </p>
+                </div>
+            </div>
+            <div class="row d-block d-md-flex">
+                <div class="col-md-2 pt-1">
+                    Fevereiro de 2016 – Dezembro de 2016
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">Ecoceano - Empresa Júnior de Consultoria em Oceanografia e Educação Ambiental</h3>
+
+                    <div><p>Gerenciar fluxo de caixa, confecção de relatórios informativos, realização de planejamento estratégico e gerir assessores na distribuição de demandas.</p></div>
+
+                    <p>
+                        <span class="badge text-body border border-1">Educação Ambiental</span>
+                        <span class="badge text-body border border-1">Controle de Caixa</span>
+                        <span class="badge text-body border border-1">Contabilidade</span>
                     </p>
                 </div>
             </div>
