--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Professional Experience</h2>
+            <h2 class="mb-4">Experiência Profissional</h2>
             <div class="row d-block d-md-flex mb-5">
                 <div class="col-md-2 pt-1">
                     Novembro de 2022 – Momento
@@ -189,7 +189,7 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Mazars</h3>
 
-                    <div><ul><li>Pentest interno e externo;</li><li>Pentest em aplicações Web;</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K.</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação.</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética.Prince Hamlet is visited by his father&#39;s ghost and ordered to avenge his father&#39;s murder by killing King Claudius, his uncle. After struggling with several questions, including whether what the ghost said is true and whether it is right for him to take revenge, Hamlet, along with almost all the other major characters, is killed.</li></ul></div>
+                    <div><ul><li>Pentest interno e externo;</li><li>Pentest em aplicações Web;</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K.</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação.</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Pentest</span>
@@ -271,29 +271,67 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Education</h2>
-            <div>King Edward VI Grammar School in Stratford-upon-Avon [1571 - 1578]</div>
+            <div>Defesa Cibernética - Faculdade de Informática e Administração Paulista - FIAP [2022]</div>
+            <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
 
-        <h2 class="mb-4">Additional Experience</h2>
+        <h2 class="mb-4">Experiência Adicional</h2>
 
         <div class="mb-4">
-            <h3 class="fs-4 fw-normal">Performance</h3>
+            <h3 class="fs-4 fw-normal">Pentest</h3>
 
-            <p>Thousands of performances of my plays have been staged since the end of the 16th century. Many of my greatest plays were performed by the Lord Chamberlain&#39;s Men and King&#39;s Men acting companies at the <a href="https://en.wikipedia.org/wiki/Globe_Theatre">Globe</a> and Blackfriars Theatres.</p>
+            <pre><code>  Pentest interno e externo; Web application pentest; Análise de vulnerabilidade.
+  </code></pre>
 
             <div>
-                <span class="badge text-body border border-1">theater</span>
-                <span class="badge text-body border border-1">play</span>
+                <span class="badge text-body border border-1">Kali Linux</span>
+                <span class="badge text-body border border-1">Burp Suite</span>
+                <span class="badge text-body border border-1">Metasploit</span>
+                <span class="badge text-body border border-1">PowerSploit</span>
+                <span class="badge text-body border border-1">Inveigh</span>
+                <span class="badge text-body border border-1">Owasp Amass</span>
+                <span class="badge text-body border border-1">Dehashed</span>
+                <span class="badge text-body border border-1">Nmap</span>
+                <span class="badge text-body border border-1">Nessus</span>
+                <span class="badge text-body border border-1">Breach-Parsed</span>
+                <span class="badge text-body border border-1">Shodan</span>
+                <span class="badge text-body border border-1">GitLab</span>
+                <span class="badge text-body border border-1">GitHub</span>
+                <span class="badge text-body border border-1">AWS</span>
+                <span class="badge text-body border border-1">Azure</span>
+                <span class="badge text-body border border-1">Customização de scripts em Bash, PHP, SQL, Python, C, Perl, Ruby, PowerShell</span>
             </div>
         </div>
         <div class="mb-4">
-            <h3 class="fs-4 fw-normal">Poetry</h3>
+            <h3 class="fs-4 fw-normal">Auditor/ Consultor</h3>
 
-            <p>In 1593 and 1594, when the theatres were closed because of plague, I published two narrative poems on sexual themes, Venus and Adonis and The Rape of Lucrece. I dedicated them to Henry Wriothesley, Earl of Southampton.</p>
+            <pre><code>  Implementação de políticas de segurança, análise e mitigação de risco, mapeamento de fluxo.
+  </code></pre>
 
             <div>
-                <span class="badge text-body border border-1">poetry</span>
-                <span class="badge text-body border border-1">erotic</span>
+                <span class="badge text-body border border-1">COBIT</span>
+                <span class="badge text-body border border-1">National Institute of Standards (NIST)</span>
+                <span class="badge text-body border border-1">International Organization for Standardization (ISO 27K)</span>
+                <span class="badge text-body border border-1">Information Security Forum (ISF)</span>
+                <span class="badge text-body border border-1">Standard of Good Practice for Information Security (SOGP)</span>
+                <span class="badge text-body border border-1">Committee of Sponsoring Organizations of the Treadway Commission (COSO II)</span>
+            </div>
+        </div>
+        <div class="mb-4">
+            <h3 class="fs-4 fw-normal">Data Science</h3>
+
+            <pre><code>  Data analysis; Qualificação de dados; Criação de processos de processamento de dados; Automatização de processamento.
+  </code></pre>
+
+            <div>
+                <span class="badge text-body border border-1">Anaconda</span>
+                <span class="badge text-body border border-1">Github</span>
+                <span class="badge text-body border border-1">Python</span>
+                <span class="badge text-body border border-1">PHP</span>
+                <span class="badge text-body border border-1">Matlab</span>
+                <span class="badge text-body border border-1">ArcGis</span>
+                <span class="badge text-body border border-1">Qgis</span>
+                <span class="badge text-body border border-1">Autocad</span>
             </div>
         </div>
     </div>
