--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Certificações, Cursos e outros</h2>
-            <div>Novo Pentester Profissional e Pentester Experience - DESEC</div>
+            <h2 class="mb-4">Novo Pentester Profissional e Pentester Experience - DESEC</h2>
             <div>OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</div>
             <div>Complete Beginner Learning Path- TryHackMe</div>
             <div>OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</div>
