--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Certificações, Cursos e outros</h2>
-            <h2 class="mb-4">Novo Pentester Profissional e Pentester Experience - DESEC</h2>
-            <div>OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</div>
-            <div>Complete Beginner Learning Path- TryHackMe</div>
-            <div>OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</div>
-            <div>Certificado de Qualificação Profissional em CiberSegurança - FIAP</div>
-            <div>Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</div>
-            <div>A Nova Geração em Pentest Profissional - DeSec</div>
-            <div>Introduction to Cybersecurity - CISCO</div>
+            <h5 class="mb-4">Novo Pentester Profissional e Pentester Experience - DESEC</h5>
+            <h5 class="mb-4">OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</h5>
+            <h5 class="mb-4">Complete Beginner Learning Path- TryHackMe</h5>
+            <h5 class="mb-4">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</h5>
+            <h5 class="mb-4">Certificado de Qualificação Profissional em CiberSegurança - FIAP</h5>
+            <h5 class="mb-4">Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</h5>
+            <h5 class="mb-4">A Nova Geração em Pentest Profissional - DeSec</h5>
+            <h5 class="mb-4">Introduction to Cybersecurity - CISCO</h5>
         </div>
 
 
