--- a/index.html
+++ b/index.html
@@ -277,14 +277,44 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Certificações, Cursos e outros</h2>
-            <h5 class="mb-4">Novo Pentester Profissional e Pentester Experience - DESEC</h5>
-            <h5 class="mb-4">OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</h5>
-            <h5 class="mb-4">Complete Beginner Learning Path- TryHackMe</h5>
-            <h5 class="mb-4">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</h5>
-            <h5 class="mb-4">Certificado de Qualificação Profissional em CiberSegurança - FIAP</h5>
-            <h5 class="mb-4">Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</h5>
-            <h5 class="mb-4">A Nova Geração em Pentest Profissional - DeSec</h5>
-            <h5 class="mb-4">Introduction to Cybersecurity - CISCO</h5>
+            <div> 
+                <ul>
+                    <li>
+                        ::marker
+                        Novo Pentester Profissional e Pentester Experience - DESEC
+                    </li>
+                    <li>
+                        ::marker
+                        OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
+                    </li>
+                    <li>
+                        ::marker
+                        Complete Beginner Learning Path- TryHackMe
+                    </li>
+                    <li>
+                        ::marker
+                        OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
+                    </li>
+                    <li>
+                        ::marker
+                        Certificado de Qualificação Profissional em CiberSegurança - FIAP
+                    </li>
+                    <li>
+                        ::marker
+                        Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
+                    </li>
+                    <li>
+                        ::marker
+                        A Nova Geração em Pentest Profissional - DeSec
+                    </li>
+                    <li>
+                        ::marker
+                        Introduction to Cybersecurity - CISCO
+                    </li>
+
+                </ul>
+            </div>
+            
         </div>
 
 
