--- a/index.html
+++ b/index.html
@@ -280,36 +280,28 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
             <div> 
                 <ul>
                     <li>
-                        ::marker
-                        Novo Pentester Profissional e Pentester Experience - DESEC
+                        ::marker Novo Pentester Profissional e Pentester Experience - DESEC
                     </li>
                     <li>
-                        ::marker
-                        OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
+                        ::marker OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
                     </li>
                     <li>
-                        ::marker
-                        Complete Beginner Learning Path- TryHackMe
+                        ::marker Complete Beginner Learning Path- TryHackMe
                     </li>
                     <li>
-                        ::marker
-                        OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
+                        ::marker OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
                     </li>
                     <li>
-                        ::marker
-                        Certificado de Qualificação Profissional em CiberSegurança - FIAP
+                        ::marker Certificado de Qualificação Profissional em CiberSegurança - FIAP
                     </li>
                     <li>
-                        ::marker
-                        Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
+                        ::marker Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
                     </li>
                     <li>
-                        ::marker
-                        A Nova Geração em Pentest Profissional - DeSec
+                        ::marker A Nova Geração em Pentest Profissional - DeSec
                     </li>
                     <li>
-                        ::marker
-                        Introduction to Cybersecurity - CISCO
+                        ::marker Introduction to Cybersecurity - CISCO
                     </li>
 
                 </ul>
