--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
             <div> 
                 <ul>
                     <li>
-                        ::marker Novo Pentester Profissional e Pentester Experience - DESEC
+                        Novo Pentester Profissional e Pentester Experience - DESEC
                     </li>
                     <li>
                         ::marker OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
