--- a/index.html
+++ b/index.html
@@ -280,28 +280,28 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
             <div> 
                 <ul>
                     <li>
-                        Novo Pentester Profissional e Pentester Experience - DESEC
+                        <a href="https://desecsecurity.com/curso/novo-pentest-profissional">Novo Pentester Profissional e Pentester Experience - DESEC
+                    </a></li>
+                    <li>
+                        OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
                     </li>
                     <li>
-                        ::marker OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
+                        Complete Beginner Learning Path- TryHackMe
                     </li>
                     <li>
-                        ::marker Complete Beginner Learning Path- TryHackMe
+                        OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
                     </li>
                     <li>
-                        ::marker OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
+                        Certificado de Qualificação Profissional em CiberSegurança - FIAP
                     </li>
                     <li>
-                        ::marker Certificado de Qualificação Profissional em CiberSegurança - FIAP
+                        Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
                     </li>
                     <li>
-                        ::marker Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
+                        A Nova Geração em Pentest Profissional - DeSec
                     </li>
                     <li>
-                        ::marker A Nova Geração em Pentest Profissional - DeSec
-                    </li>
-                    <li>
-                        ::marker Introduction to Cybersecurity - CISCO
+                        Introduction to Cybersecurity - CISCO
                     </li>
 
                 </ul>
