--- a/index.html
+++ b/index.html
@@ -276,32 +276,32 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Certificações, Cursos e outros</h2>
+            <h2 class="mb-4">Certificações</h2>
             <div> 
                 <ul>
                     <li>
                         <a href="https://desecsecurity.com/curso/novo-pentest-profissional">Novo Pentester Profissional e Pentester Experience - DESEC
                     </a></li>
                     <li>
-                        OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-inteligencia-cibernetica-com-vinicius-vieira/J81793434W"> OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</a>
                     </li>
                     <li>
-                        Complete Beginner Learning Path- TryHackMe
+                        <a href="https://tryhackme.com/">Complete Beginner Learning Path- TryHackMe</a>
                     </li>
                     <li>
-                        OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura
+                        <a href="https://alura.com.br">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
                     </li>
                     <li>
-                        Certificado de Qualificação Profissional em CiberSegurança - FIAP
+                        <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação Profissional em CiberSegurança - FIAP</a>
                     </li>
                     <li>
-                        Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP
+                        <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</a>
                     </li>
                     <li>
-                        A Nova Geração em Pentest Profissional - DeSec
+                        <a href="https://desecsecurity.com/curso/introducao-pentest">A Nova Geração em Pentest Profissional - DeSec</a>
                     </li>
                     <li>
-                        Introduction to Cybersecurity - CISCO
+                        <a href="https://www.netacad.com/courses/cybersecurity/introduction-cybersecurity">Introduction to Cybersecurity - CISCO</a>
                     </li>
 
                 </ul>
