--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h2 class="mb-4">Resumo</h2>
             Graduado em defesa cibernética pela FIAP. Experiência no campo de segurança, proficiente em testes de
             segurança ofensiva (infraestrutura e web) e análise de vulnerabilidades; usando técnicas de invasão,
             análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações.
