--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Mazars</h3>
 
-                    <div><ul><li>Pentest interno e externo;</li><li>Pentest em aplicações Web;</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K.</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação.</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética.</li></ul></div>
+                    <div><ul><li>Pentest interno e externo</li><li>Pentest em aplicações Web</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Pentest</span>
@@ -106,12 +106,10 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Pentester</h3>
 
-                    <div><ul><li>Pentest Externo;</li><li>Pentest Interno;</li><li>Pentest Web;</li><li>Análise de segurança.</li></ul></div>
+                    <div><ul><li>Pentest Externo</li><li>Pentest Interno</li><li>Pentest Web</li><li>Análise de segurança</li></ul></div>
 
                     <p>
-                        <span class="badge text-body border border-1">Pentest Interno</span>
-                        <span class="badge text-body border border-1">Pentest Externo</span>
-                        <span class="badge text-body border border-1">Pentest Web</span>
+                        <span class="badge text-body border border-1">Pentest </span>
                         <span class="badge text-body border border-1">Análise de Vulnerabilidade</span>
                     </p>
                 </div>
