--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
             </div>
                           
         </div>
-
+    </div>
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h3 class="h2 screen mb-4">Skills</h3>
             <div class="row align-items-center">
