--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-print-6 col-12 col-md-5 offset-lg-1 col-lg-4">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-start">
-                            <span class="text-nowrap">Residence</span>
+                            <span class="text-nowrap">Local</span>
                             <span class="text-nowrap"><a href="https://www.google.com/maps/d/embed?mid=1njMqPYaeTpLPTg1FGom0BoJJA3o&hl=en&ehbc=2E312F" width="640" height="480"><i class="fa fa-home fact-icon"></i>Espirito Santo</a></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-start">
@@ -169,7 +169,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Education</h2>
+            <h2 class="mb-4">Formação</h2>
             <div>Defesa Cibernética - Faculdade de Informática e Administração Paulista - FIAP [2022]</div>
             <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
@@ -309,7 +309,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
                 </div>
             </div>
         </div>
-        
+
         <h2 class="mb-4">Experiência Adicional</h2>
 
         <div class="mb-4">
