--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             segurança ofensiva (infraestrutura e web) e análise de vulnerabilidades; usando técnicas de invasão,
             análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações.
             Entregou projetos na implementação de processos de resposta a incidentes e inteligência de ameaças.
-            Tenho experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
+            Experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
             auditando o cumprimento de regulamentos de segurança cibernética como SUSEP, BACEN e padrões
             como ISO 27K. Experiência em análise e processamento de dados usando Python, com as
             bibliotecas de Data Science no pacote anaconda. Formado em oceanografia, atuou na
