--- a/index.html
+++ b/index.html
@@ -116,24 +116,6 @@
             </div>
             <div class="row d-block d-md-flex mb-5">
                 <div class="col-md-2 pt-1">
-                    Abril de 2022 – Junho de 2022
-                </div>
-                <div class="col-md-10">
-                    <h3 class="fs-4 fw-normal">Enygma</h3>
-
-                    <div><p>Fortinet:
-Análise de Log’s;
-Identificação de risco;
-Análise de relatórios de vulnerabilidade.</p></div>
-
-                    <p>
-                        <span class="badge text-body border border-1">SOC</span>
-                        <span class="badge text-body border border-1">Fortinet</span>
-                    </p>
-                </div>
-            </div>
-            <div class="row d-block d-md-flex mb-5">
-                <div class="col-md-2 pt-1">
                     Abril de 2018 – Julho de 2021
                 </div>
                 <div class="col-md-10">
@@ -185,10 +167,10 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
                         <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-inteligencia-cibernetica-com-vinicius-vieira/J81793434W"> OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</a>
                     </li>
                     <li>
-                        <a href="https://tryhackme.com/">Complete Beginner Learning Path- TryHackMe</a>
+                        <a href="https://tryhackme.com/path/outline/beginner">Complete Beginner Learning Path- TryHackMe</a>
                     </li>
                     <li>
-                        <a href="https://alura.com.br">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
+                        <a href="https://www.alura.com.br/formacao-owasp">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
                     </li>
                     <li>
                         <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação Profissional em CiberSegurança - FIAP</a>
