--- a/index.html
+++ b/index.html
@@ -191,6 +191,59 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h2 class="mb-4">Experiência Voluntária</h2>
+            <div class="row d-block d-md-flex mb-5">
+                <div class="col-md-2 pt-1">
+                    Abril de 2022 – Junho de 2022
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">Enygma</h3>
+
+                    <div><p>Fortinet:
+Análise de Log’s;
+Identificação de risco;
+Análise de relatórios de vulnerabilidade.</p></div>
+
+                    <p>
+                        <span class="badge text-body border border-1">SOC</span>
+                        <span class="badge text-body border border-1">Fortinet</span>
+                    </p>
+                </div>
+            </div>
+            <div class="row d-block d-md-flex mb-5">
+                <div class="col-md-2 pt-1">
+                    Março de 2012 – setembro de 2012
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">IPRAM</h3>
+
+                    <div><p>Tratamento e proteção de animais em recuperação da costa do Espirito Santo</p></div>
+
+                    <p>
+                        <span class="badge text-body border border-1">Proteção Ambiental </span>
+                        <span class="badge text-body border border-1">Educação Ambiental</span>
+                    </p>
+                </div>
+            </div>
+            <div class="row d-block d-md-flex">
+                <div class="col-md-2 pt-1">
+                    Março de 2016 – Dezembro de 2016
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">Na Onda do Futuro</h3>
+
+                    <div><p>Criação de dinâmicas de aula focadas em eduação ambiental para criaças</p></div>
+
+                    <p>
+                        <span class="badge text-body border border-1">Educação Ambiental</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h3 class="h2 screen mb-4">Skills</h3>
             <div class="row align-items-center">
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
