--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     Fevereiro de 2022 – Momento
                 </div>
                 <div class="col-md-10">
-                    <h3 class="fs-4 fw-normal">Pentester</h3>
+                    <h3 class="fs-4 fw-normal">Pentester Autônomo</h3>
 
                     <div><ul><li>Pentest Externo</li><li>Pentest Interno</li><li>Pentest Web</li><li>Análise de segurança</li></ul></div>
 
